Step 9: Use the first field set for name, email, and password field

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 </head>
 <body>
     <h1>Registration Form</h1>
-    <form action="#"></form>
-    <fieldset></fieldset>
-    <fieldset></fieldset>
-    <fieldset></fieldset>
+    <form action="#">
+        <!-- First name, last name, email, password field -->
+        <fieldset>
+            <label>First name</label>
+            <label>Last name</label>
+            <label>Email</label>
+            <label>Password</label>
+        </fieldset>
+
+        <fieldset></fieldset>
+        <fieldset></fieldset>
+    </form>
+    
 </body>
 </html>
