Step 10:Add the following for 4 label elements: Enter your first name, enter your last name, enter your email, enter your password

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <form action="#">
         <!-- First name, last name, email, password field -->
         <fieldset>
-            <label>First name</label>
-            <label>Last name</label>
-            <label>Email</label>
-            <label>Password</label>
+            <label>Enter your first name:</label>
+            <label>Enter your last name:</label>
+            <label>Enter your email:</label>
+            <label>Enter your password:</label>
         </fieldset>
 
         <fieldset></fieldset>
