--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <fieldset>
             <label><input type="radio" name="account-type">Personal Account</label>
             <label><input type="radio" name="account-type">Business Account</label>
-            <label><input type="checkbox" required>I accept the terms and conditions.</label>
+            <label><input type="checkbox" required>I accept the <a href="#">terms and conditions.</a></label>
         </fieldset>
         <fieldset></fieldset>
         <input type="submit" value="submit">
