--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <label><input type="radio" name="account-type">Business Account</label>
             <label><input type="checkbox" required>I accept the <a href="#">terms and conditions.</a></label>
         </fieldset>
-        <fieldset></fieldset>
+
+        <fieldset>
+            <label>Upload a profile picture: <input type="file"></label>
+        </fieldset>
         <input type="submit" value="submit">
     </form>
     
