--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
             <label>Upload a profile picture: <input type="file"></label>
             <label>Input your age (years): <input type="number" min="13" max="120"></input></label>
         </fieldset>
-        <select>
-            <option value=""></option>
-            <option value=""></option>
-            <option value=""></option>
-            <option value=""></option>
-            <option value=""></option>
-        </select>
+        <label>
+            How did you hear from us?
+            <select>
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+            </select>
+        </label>
         <input type="submit" value="submit">
     </form>
     
