--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <label>
             How did you hear from us?
             <select>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
+                <option value="">(select one)</option>
+                <option value="">News</option>
+                <option value="">Blog</option>
+                <option value="">Forum</option>
+                <option value="">others</option>
             </select>
         </label>
         <input type="submit" value="submit">
