--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             How did you hear from us?
             <select>
                 <option value="">(select one)</option>
-                <option value="">News</option>
-                <option value="">Blog</option>
-                <option value="">Forum</option>
-                <option value="">others</option>
+                <option value="1">News</option>
+                <option value="2">Blog</option>
+                <option value="3">Forum</option>
+                <option value="4">others</option>
             </select>
         </label>
         <input type="submit" value="submit">
