--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <option value="4">others</option>
             </select>
         </label>
+        <label>
+            Provide a bio:
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+        </label>
         <input type="submit" value="submit">
     </form>
     
