--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <form action="#">
         <!-- First name, last name, email, password field -->
         <fieldset>
-            <label>Enter your first name: <input type="text" required/></label>
-            <label>Enter your last name: <input type="text" required/></label>
-            <label>Enter your email: <input type="email" required/></label>
-            <label>Enter your password: <input type="password" pattern="[a-z0-5]{8}" required/></label>
+            <label>Enter your first name: <input type="text" name="firstName" required/></label>
+            <label>Enter your last name: <input type="text" name="lastName" required/></label>
+            <label>Enter your email: <input type="email" name="email" required/></label>
+            <label>Enter your password: <input type="password" name="password" pattern="[a-z0-5]{8}" required/></label>
         </fieldset>
         <!-- Radio for choosing either personal or business account and a checkbox for the terms and conditions -->
         <fieldset>
@@ -25,12 +25,12 @@
         </fieldset>
         <!-- Fieldset for letting the user upload a profile picture -->
         <fieldset>
-            <label>Upload a profile picture: <input type="file"></label>
-            <label>Input your age (years): <input type="number" min="13" max="120"></input></label>
+            <label>Upload a profile picture: <input type="file" name="fileUpload"></label>
+            <label>Input your age (years): <input type="number" name="age" min="13" max="120"></input></label>
         </fieldset>
         <label>
             How did you hear from us?
-            <select>
+            <select name="referrer">
                 <option value="">(select one)</option>
                 <option value="1">News</option>
                 <option value="2">Blog</option>
@@ -40,7 +40,7 @@
         </label>
         <label>
             Provide a bio:
-            <textarea name="" id="" cols="30" rows="3" placeholder="I like coding on a rainy day..."></textarea>
+            <textarea name="bio" id="" cols="30" rows="3" placeholder="I like coding on a rainy day..."></textarea>
         </label>
         <input type="submit" value="submit">
     </form>
