--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Registration Form</h1>
+    <p>Please fill out this form with the required information.</p>
     <form action="#">
         <!-- First name, last name, email, password field -->
         <fieldset>
@@ -21,7 +22,7 @@
         <fieldset>
             <label><input type="radio" name="account-type">Personal Account</label>
             <label><input type="radio" name="account-type">Business Account</label>
-            <label><input type="checkbox" required>I accept the <a href="#">terms and conditions.</a></label>
+            <label><input type="checkbox" name="termsConditions" required>I accept the <a href="#">terms and conditions.</a></label>
         </fieldset>
         <!-- Fieldset for letting the user upload a profile picture -->
         <fieldset>
